fix Hammersmith font not showing when not installed locally

--- a/frontend/src/theme/variables.css
+++ b/frontend/src/theme/variables.css
@@ -2,7 +2,7 @@
 http://ionicframework.com/docs/theming/ */
 
 @font-face {
-  font-family: "Hammersmith One", sans-serif;
+  font-family: "Hammersmith One";
   src: url("../resources/fonts/HammersmithOne-Regular.ttf");
 }
 
